--- a/src/styles/common/header.scss
+++ b/src/styles/common/header.scss
@@ -44,6 +44,7 @@
   -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
   background: transparent;
+  z-index: 100;
 
   &:before,
   &:after {
@@ -103,6 +104,7 @@
       opacity: 0.99;
       visibility: visible;
       transform: scale(1);
+      z-index: 100;
       li {
           display: block;
           animation: fadeInRight 0.4s cubic-bezier(0.42, 0.83, 0.7, 1.5)
