--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,7 +11,7 @@ html, body {
 }
 
 .section_01{
-  padding-top: 100px;
+  padding-top: 250px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: flex-start;
@@ -27,6 +27,7 @@ html, body {
     justify-content: center;
     width: 100%;
     height: 300px;
+    margin-top: 150px;
     top: 5vw;
 
     @media (min-width: 1168px) {
@@ -38,27 +39,40 @@ html, body {
         }
       }
     }
+    .wht_u_nd{
+      font-size: 54px;
+      font-weight: 600;
+      font-family: 'Fira Sans', sans-serif;
+      color: #000;
+      display: flex;
+      flex-flow: column nowrap;
+      position: absolute;
+      top: 0;
+
+      hr{
+        height: 6px;
+        width: 60px;
+        border-radius: 10px;
+        background-color: #000;
+        margin: 20px 10px;
+      }
+    }
     .code{
       display: flex;
       color: #5052d0;
-      span{
-        padding: 0 0.25em;
-      }
     }
     .design{
       display: flex;
       align-self: flex-end;
       color: white;
-      span{
-        padding: 0 0.4em;
-        
-      }
     }
     .big_font{
       font-size: 84px;
       font-family: 'Fira Sans', sans-serif;
       font-weight: 600;
       padding: 50px;
+      z-index: 1;
+      
       
       @media (min-width: 1168px) {
         font-size: 102px;
@@ -78,6 +92,7 @@ html, body {
           border: 1px solid black;
           border-radius: 0.5em;
           border-color: black;
+          padding: 0 0.4em;
         }
       }
     }
