--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -17,30 +17,25 @@ block content
       path.action(d='M 0 800 V 0 300 C 250 200, 400 300, 480 140 S 800 60, 1000 0  V 1100 800 z')
       // path(d='M 0 800 V 0 300 C 250 200, 400 300, 480 140 S 800 60, 1000 0  V 1100 800 z') 
   section.section_02
-    .content
-      .info
-        .title Наши работы
-        .info_content
-          .numb
-            .numb_count 1/3
-            .numb_figures
-              .figure
-          .info_content_text
-            .title_2 Профессиональный барбершоп в Новосибирске
-              .text Landing page
-      .visual
-        img.pc(
-          src="img/section_02_pc.png"
-        )
-        .mockup
-          .mockup_imgs
-            img(
-              src="img/DVABRO2.png"
-            )
-            img(
-              src="img/DVABRO2.png"
-            )
-            img(
-              src="img/DVABRO2.png"
-            )
+    
+    .sec_2_main
+      .title Наши работы
+      .content
+        .back_3
+        .back_2
+        .back_1
+        .layout
+    .info
+      .info_content#1
+        .info_content_text
+          .title_2 Барбершоп ДваБро в Новосибирске
+          .text Landing Page
+      .info_content#2
+        .info_content_text
+          .title_2 Летний лагерь "Солнечная поляна"
+          .text Landing Page
+      .info_content#3
+        .info_content_text
+          .title_2 Компания "Техно Универсал"
+          .text Landing Page
   section.section_03
