--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -39,3 +39,6 @@ block content
           .title_2 Компания "Техно Универсал"
           .text Landing Page
   section.section_03
+    .sec_3_main
+      .title Этапы работы с нами
+      .browser
